security: add rate limiting, API key auth, XSS protection, auto-detect URL, cache model
1. Auto-detect API URL — frontend detects backend from window.location (no hardcoded URL)
2. API key auth — ADMIN_API_KEY env var protects all write/admin endpoints via X-API-Key header
3. Rate limiting — flask-limiter: 30 req/min on /api/chat, 20/min on writes, 200/hr global
4. XSS protection — HTML-escape bot responses, render only safe markdown (**bold**, newlines)
5. Docker model cache — pre-download FLAN-T5-XL weights during build (avoids 6GB download on restart)

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,8 @@ USE_LOCAL_MODEL="true"
 SUPABASE_URL="https://your-project.supabase.co"
 SUPABASE_KEY="your-anon-public-key-here"
 
+# Admin API Key (protects write/admin endpoints)
+# Generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
+# If unset, admin endpoints are open (dev mode)
+ADMIN_API_KEY=""
+
