fix: patch 9 security vulnerabilities
- Restore rate limiting on chat (30/min) and write endpoints (20/min)
  via shared extensions.py to avoid circular imports
- Sanitize PostgREST filter inputs (services/sanitize.py) to prevent
  filter injection in product search and lookup
- Use hmac.compare_digest for constant-time API key comparison
- Remove API key acceptance via query string (header-only)
- Add security headers (CSP, X-Frame-Options, nosniff, XSS-Protection)
- Restrict CORS to configurable origins (CORS_ORIGINS env var)
- Add Flask SECRET_KEY (FLASK_SECRET_KEY env var, auto-generated fallback)
- Remove chatbot.db from git tracking, add *.db to .gitignore
- Sanitize debug endpoint error output (no raw exceptions/paths)

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,11 @@ dist/
 # Environment variables
 .env
 
+# Database files (may contain PII)
+*.db
+*.sqlite
+*.sqlite3
+
 # OS / editor
 .DS_Store
 Thumbs.db
